--- a/DigitalDevice/app/src/main/res/drawable/gradient_background.xml
+++ b/DigitalDevice/app/src/main/res/drawable/gradient_background.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="180"
-                android:startColor="#F1F5F9"
+                android:startColor="#D3DEE8"
                 android:endColor="#D3DEE8"
                 android:type="linear" />
         </shape>
