--- a/DigitalDevice/app/src/main/res/layout/activity_register.xml
+++ b/DigitalDevice/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,276 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.register.RegisterActivity">
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/formRegister"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="24dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
+
+            <!-- Logo + chào mừng -->
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/logo"
+                android:contentDescription="Logo" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Welcome home"
+                android:textColor="#333333"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <!-- Mô tả nhỏ -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Register in to sync data across multiple devices"
+                android:textColor="#666666"
+                android:textSize="14sp"
+                android:gravity="center" />
+
+            <!-- Form đăng nhập -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="32dp">
+
+                <EditText
+                    android:id="@+id/txtAccountInputRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:hint="Username"
+                    android:background="@drawable/input_background_light"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#888888"
+                    android:inputType="text" />
+                <EditText
+                    android:id="@+id/txtPhoneInputRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="8dp"
+                    android:hint="Phone"
+                    android:background="@drawable/input_background_light"
+                    android:padding="12dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#888888"
+                    android:inputType="text" />
+
+                <View android:layout_height="8dp" android:layout_width="match_parent"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/input_background_light">
+
+                    <EditText
+                        android:id="@+id/txtPasswordInputRegister"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Password"
+                        android:padding="12dp"
+                        android:paddingEnd="48dp"
+                        android:textColor="#000000"
+                        android:textColorHint="#888888"
+                        android:inputType="textPassword"
+                        android:background="@null" />
+
+                    <ImageView
+                        android:id="@+id/togglePasswordVisibility"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="12dp"
+                        android:src="@drawable/ic_hide" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/input_background_light">
+
+                    <EditText
+                        android:id="@+id/txtPasswordInputRegister2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="Re-enter the password."
+                        android:padding="12dp"
+                        android:paddingEnd="48dp"
+                        android:textColor="#000000"
+                        android:textColorHint="#888888"
+                        android:inputType="textPassword"
+                        android:background="@null" />
+
+                    <ImageView
+                        android:id="@+id/togglePasswordVisibility2"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="12dp"
+                        android:src="@drawable/ic_hide" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnRegister"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/bg_button_upgrade"
+                android:text="REGISTER"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold" />
+
+            <!-- Đăng ký - Quên mật khẩu -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/txt_intent_login"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Login now"
+                    android:gravity="center"
+                    android:textColor="#ED9411"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Forgot help?"
+                    android:gravity="center"
+                    android:textColor="#ED9411"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <!-- Dòng chia cách -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="12dp">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"
+                    android:background="#CCCCCC"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Register with"
+                    android:textColor="#888888"
+                    android:textSize="14sp"
+                    android:layout_marginHorizontal="12dp"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1"
+                    android:background="#CCCCCC"/>
+            </LinearLayout>
+
+            <!-- Nút đăng nhập mạng xã hội -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/facebookLogin"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/facebook"
+                    android:layout_marginRight="5dp"
+                    android:contentDescription="Facebook login"
+                    android:scaleType="centerInside"/>
+                <ImageView
+                    android:id="@+id/google"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/ic_google"
+                    android:contentDescription="Facebook login"
+                    android:scaleType="centerInside"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+    <LinearLayout
+        android:id="@+id/dialog_success_register"
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:visibility="gone"
+        >
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieSuccess"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:lottie_rawRes="@raw/animation_success"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="false"
+            app:lottie_speed="1.0"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Success!"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginTop="12dp"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Account created successfully."
+            android:layout_marginTop="8dp"
+            android:gravity="center"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_intent_register_login"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:text="Tiếp tục"/>
+    </LinearLayout>
+
+</FrameLayout>
