--- a/DigitalDevice/app/src/main/res/values/dimens.xml
+++ b/DigitalDevice/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <dimen name="pageMargin">16dp</dimen>
-    <dimen name="offset">8dp</dimen>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <dimen name="bottom_nav_height">40dp</dimen>
+    <dimen name="icon_size_small">25dp</dimen>
 </resources>
