--- a/DigitalDevice/app/src/main/res/layout/setting_fragment.xml
+++ b/DigitalDevice/app/src/main/res/layout/setting_fragment.xml
@@ -9,7 +9,7 @@
 
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/fragment_container_setting"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -243,6 +243,7 @@
                         android:src="@drawable/st_logout" />
 
                     <TextView
+                        android:id="@+id/txtLogout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
