--- a/DigitalDevice/app/src/main/res/layout/setting_fragment.xml
+++ b/DigitalDevice/app/src/main/res/layout/setting_fragment.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_container_setting"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient_background">
+   >
 
 
     <FrameLayout
-        android:id="@+id/fragment_container_setting"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
@@ -147,7 +148,7 @@
                         android:src="@drawable/st_members" />
 
                     <TextView
-                        android:id="@+id/textVfie"
+                        android:id="@+id/txtmember"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
