--- a/DigitalDevice/app/src/main/res/values/colors.xml
+++ b/DigitalDevice/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="green">#44AE48</color>
     <color name="red">#F61100</color>
     <color name="yellow">#DDC919</color>
+    <color name="gray">#666262</color>
 </resources>
 
