--- a/DigitalDevice/app/src/main/res/layout/add_user_fragment.xml
+++ b/DigitalDevice/app/src/main/res/layout/add_user_fragment.xml
@@ -79,7 +79,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/txtIntentAddUser"
             android:layout_width="339dp"
             android:layout_height="32dp"
             android:layout_marginTop="36dp"
@@ -93,6 +93,51 @@
             app:layout_constraintTop_toBottomOf="@+id/rcvMember" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/formDialogInAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:background="@drawable/bg_dialog"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bạn có muốn xóa?"
+            android:textSize="18sp"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btnCancelInAddUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hủy"
+                android:backgroundTint="#BDBDBD"
+                android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/btnDeleteInAddUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Xóa"
+                android:layout_marginStart="12dp"
+                android:backgroundTint="#F44336"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+    </LinearLayout>
 
 
 
