--- a/DigitalDevice/app/src/main/res/layout/activity_register.xml
+++ b/DigitalDevice/app/src/main/res/layout/activity_register.xml
@@ -86,21 +86,24 @@
                         android:id="@+id/txtPasswordInputRegister"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@null"
                         android:hint="Password"
+                        android:inputType="textPassword"
                         android:padding="12dp"
                         android:paddingEnd="48dp"
                         android:textColor="#000000"
-                        android:textColorHint="#888888"
-                        android:inputType="textPassword"
-                        android:background="@null" />
+                        android:textColorHint="#888888" />
 
                     <ImageView
                         android:id="@+id/togglePasswordVisibility"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
+                        android:layout_alignParentTop="true"
                         android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="9dp"
                         android:layout_marginEnd="12dp"
+                        android:layout_marginBottom="15dp"
                         android:src="@drawable/ic_hide" />
                 </RelativeLayout>
                 <RelativeLayout
@@ -113,7 +116,7 @@
                         android:id="@+id/txtPasswordInputRegister2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:hint="Re-enter the password."
+                        android:hint="Re-enter the password"
                         android:padding="12dp"
                         android:paddingEnd="48dp"
                         android:textColor="#000000"
