--- a/DigitalDevice/app/src/main/res/layout/activity_select_home.xml
+++ b/DigitalDevice/app/src/main/res/layout/activity_select_home.xml
@@ -41,7 +41,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/registerText"
+                    android:id="@+id/txtIdUserInSelectHome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
